add person account OK

--- a/accounting/templates/accounting/accounts.html
+++ b/accounting/templates/accounting/accounts.html
@@ -6,12 +6,7 @@
        
 
    <div class="col-md-12">
-    <div class="card">
-            
-        <div class="card-body">
-
-        </div>
-    </div>
+     {% include 'accounting/includes/accounts-app/template.html' %}
    </div>
 
 
@@ -20,5 +15,7 @@
 
 
 {% block script %}
+
+     {% include 'accounting/includes/accounts-app/script.html' %}
 
 {% endblock script %}
