--- a/accounting/templates/accounting/index.html
+++ b/accounting/templates/accounting/index.html
@@ -10,6 +10,17 @@
             </h6>
         </a>
     </div>
+
+
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'accounting:person_accounts' %}">
+            <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                حساب های اشخاص
+            </h6>
+        </a>
+    </div>
+
     <div class="col-6 col-md-3 col-lg-2 text-center my-3">
         <a href="{% url 'accounting:tree_chart' pk=0 %}">
             <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
