--- a/accounting/templates/accounting/product.html
+++ b/accounting/templates/accounting/product.html
@@ -26,8 +26,12 @@
   <div class="col-md-4">
     {% include "accounting/includes/add-product-to-category-app/template.html" %}
   </div>
-  <div class="col-md-12">
+  <div class="col-md-4">
     {% include "accounting/includes/product-specifications-app/template.html" %}
+
+  </div>
+  <div class="col-md-12">
+    {% include "attachments/includes/images-app/template.html" %}
 
   </div>
 
