--- a/accounting/templates/accounting/includes/import-services-from-excel-app/script.html
+++ b/accounting/templates/accounting/includes/import-services-from-excel-app/script.html
@@ -1,7 +1,7 @@
 <script>
     let url_import_services_from_excel = "{% url 'accounting:import_services_from_excel' %}"
     let import_services_from_excel_app = new Vue({
-        el: "#load-services-from-excel-app",
+        el: "#import-services-from-excel-app",
         data: {
             waiting: false,
             new_download_file: '',
@@ -32,7 +32,9 @@
                             console.log(data)
                             if (data.result === 'SUCCEED') { 
                                 show_message(import_services_from_excel_app,"موفقیت آمیز",data.message,"success",10000)   
-
+                                    if(typeof services_app != "undefined"){
+                                        services_app.services=(data.services)
+                                }
                             }
                             if (data.result != 'SUCCEED') { 
                                 show_message(import_services_from_excel_app,"خطا",data.message,"danger",10000)   
