--- a/market/templates/market/includes/products-app/script.html
+++ b/market/templates/market/includes/products-app/script.html
@@ -1,54 +1,29 @@
 <script>
-    let products_for_products_app = JSON.parse("{{products_s|escapejs}}")
-    let products_app_data = {
-        search_for: "",
-        category_id: parseInt("{{category_id}}"),
-        products: products_for_products_app,
-        waiting: false,
-        message: { show: false },
-    }
-    let products_app_methods = {}
-</script>
-{% if add_product_form %}
-<script>
-    products_app_methods.add_product= function () {
-            let payload = {
-                csrfmiddlewaretoken: csrfmiddlewaretoken,
-                title: this.title,
-                category_id: parseInt(this.category_id),
-            }
-            console.log(payload)
-            let url = "{% url 'accounting:add_product' %}"
-            let posting = $.post(url, payload)
-            posting.done(data => {
-                if (data.result === "SUCCEED") {
-
-                    products_app.title = ""
-                    products_app.products.push(data.product)
-                }
-
-                if (data.result != "SUCCEED") {
-                    show_message(products_app, "خطا", data.message, "danger", 5000)
-                }
-
-            })
-        },
-     
-</script>
-{% else %}
-<script>
-    data = {
-        title: "",
-        category_id: parseInt("{{category_id}}"),
-        products: products,
-
-    } 
-</script>
-{% endif %}
-<script>
+    let products_for_products_app=JSON.parse("{{products_s|escapejs}}")
     let products_app = new Vue({
         el: "#products-app",
-        data: products_app_data,
-        methods: products_app_methods,
+        data: {
+            products: products_for_products_app,
+            search_for:"",
+        },
+        methods: {
+            filter: () => {
+                let search_for = (products_app.search_for).toUpperCase()
+                console.log(search_for)
+                products_app.products = products_for_products_app.filter(function (product) {
+                    let title=(product.title).toUpperCase()
+                    
+                    if(title.indexOf(search_for) > -1){
+                        return true
+                    }
+                    return false
+                })
+
+            },
+
+            to_price: (vall) => {
+                return to_price(vall)
+            }
+        }
     })
 </script>
