--- a/market/templates/market/product.html
+++ b/market/templates/market/product.html
@@ -3,94 +3,35 @@
 {% load to_price %}
 {% load static %}
 {% load to_persian_date %}
-
+{% block style %}
+<style>
+    .Showcase_no_seller__M8XOL {
+        color: #919eab;
+        line-height: 40px;
+        cursor: default;
+        text-align: center;
+        background: #ecedef;
+        display: block;
+        border-radius: 8px;
+    }
+</style>
+{% endblock style %}
 {% block content %}
 
-
-<div class="row rtl">
-    <div class="col-md-3">
-        {% if category %}
-        <div class=" rtl text-right">
-            {{category.get_market_breadcrumb_link|safe}}
-        </div>
-        
-        {% endif %}
-
-        {% include "core/includes/page-app/thumbnail-card.html" %}
-        {% include "core/includes/page-app/brief-card.html" %}
+<div class="row rtl" style="background-color: #F2F3F5;">
+    <div class="col-md-12">
+        {% include 'market/includes/product-app/navbar.html' %}
 
     </div>
-    <div class="col-md-9">
-        <div class="row rtl">
+    <div class="col-md-12">
+        {% include 'market/includes/product-app/main.html' %}
 
-            <div class="col-md-12">
-                {% if add_shop_form %}
 
-                {% include "market/includes/add-shop-app/template.html" %}
-                {% endif %}
-                {% include "market/includes/shops-app/template.html" %}
-
-            {% if add_to_cart_form %}
-              
-                {% include "market/includes/add-to-cart-app/template.html" %}
-            {% endif %}
-            </div>
-            <div class="col-md-12">
-                {% include "core/includes/page-description-app/short-description.html" %}
-                {% include "core/includes/page-description-app/description.html" %}
-            </div>
-            <div class="col-md-4">
-                {% include "core/includes/page-downloads-app/template.html" %}
-
-            </div>
-            <div class="col-md-4">
-                {% include "core/includes/page-links-app/template.html" %}
-
-            </div>
-            <div class="col-md-4">
-                {% include "core/includes/page-tags-app/template.html" %}
-
-            </div>
-            {% if add_product_to_category_form %}
-              
-            <div class="col-md-12">
-                {% include "accounting/includes/add-product-to-category-app/template.html" %}
-            </div>
-            {% endif %}
-            <div class="col-md-12">
-                {% include "core/includes/page-metadata-app/template.html" %}
-
-            </div>
-
-            <div class="col-md-12">
-                {% include "core/includes/page-images-app/template.html" %}
-
-            </div>
-            <div class="col-md-12">
-                {% include "core/includes/page-comments-app/template.html" %}
-
-            </div>
-            <div class="col-md-12">
-                {% include "core/includes/page-like-app/page-likes.html" %}
-
-            </div>
-            <div class="col-md-12">
-                {% include "core/includes/page-related-app/template.html" %}
-
-            </div>
-
-            <div class="col-md-12">
-                {% include "core/includes/page-permissions-app/template.html" %}
-
-            </div>
-            <div class="col-md-12">
-                {% include "accounting/includes/invoice-lines-app/template.html" %}
-
-            </div>
-        </div>
     </div>
+    <div class="col-md-12">
+        {% include "accounting/includes/product-app/card.html" %}
 
-
+    </div>
 </div>
 {% endblock content %}
 
@@ -101,18 +42,8 @@
 
 
 
-{% if add_shop_form %}
-{% include "market/includes/add-shop-app/script.html" %}
-{% endif %}
 
 
-{% if add_to_cart_form %}
-{% include "market/includes/add-to-cart-app/script.html" %}
-{% endif %}
-
-
-
-{% include "market/includes/shops-app/script.html" %}
 
 
 
