--- a/core/templates/core/includes/page-app/script.html
+++ b/core/templates/core/includes/page-app/script.html
@@ -9,3 +9,4 @@
 {% include "attachments/includes/links-app/script.html" %}
 {% include "attachments/includes/images-app/script.html" %}
 {% include "attachments/includes/downloads-app/script.html" %}
+{% include "core/includes/page-related-app/script.html" %}
