--- a/market/templates/market/product.html
+++ b/market/templates/market/product.html
@@ -29,6 +29,13 @@
 
     </div>
     <div class="col-md-12">
+        <h5 class="text-right mt-3">
+            محصولات مشابه
+        </h5>
+        {% include "market/includes/product-app/relateds.html" %}
+
+    </div>
+    <div class="col-md-12">
         {% include "accounting/includes/product-app/card.html" %}
 
     </div>
