transport app added, some static files added

--- a/transport/templates/transport/vehicle.html
+++ b/transport/templates/transport/vehicle.html
@@ -1,4 +1,4 @@
-{% extends "phoenix/layout.html" %}
+{% extends "transport/layout.html" %}
 
 {% block content %}
 {% include "core/includes/page-app/navbar.html" %}
