--- a/market/templates/market/category.html
+++ b/market/templates/market/category.html
@@ -10,7 +10,7 @@
   
   {{category.parent.get_market_breadcrumb_link|safe}}
   {% else %}
-  <a href="{% url 'accounting:category' pk=0 %}">خانه</a>
+  <a href="{% url 'market:category' pk=0 %}">خانه</a>
   {% endif %}
 </div>
 
