--- a/market/templates/market/includes/product-app/relateds.html
+++ b/market/templates/market/includes/product-app/relateds.html
@@ -1,12 +1,13 @@
- 
-    <div class="card" id="related-pages-app">
-         
- 
+<div class="" id="related-pages-app">
 
-            <div class="card-body">
-                <div class="row">
-             
-                    <div class="col-md-3 col-6 mb-3" v-for="related_page in related_pages">
+
+
+    <div class="">
+        <div class="row">
+
+            <div class="col-lg-2 col-md-3 col-6 mb-3" v-for="related_page in related_pages">
+                <div class="card">
+                    <div class="card-body">
                         <a :href="'/market/product/'+related_page.id">
                             <div class="text-center mb-3">
 
@@ -27,9 +28,11 @@
                         </a>
                     </div>
                 </div>
-            </div>
-            
 
+            </div>
         </div>
     </div>
- 
+
+
+</div>
+</div>
