add supplier ok,suppliers app ok

--- a/market/templates/market/includes/add-supplier-app/template.html
+++ b/market/templates/market/includes/add-supplier-app/template.html
@@ -41,7 +41,7 @@
                         <div class="form-group">
                             <label for="">پیشوند</label>
                             <select class="form-control" v-model="prefix">
-                                {% for prefix in person_prefixs %}
+                                {% for prefix in person_prefixs_for_add_supplier_app %}
                                 <option value="{{prefix}}">
                                     {{prefix}}
                                 </option>
