add attachment location,area

--- a/accounting/templates/accounting/includes/add-person-account-app/template.html
+++ b/accounting/templates/accounting/includes/add-person-account-app/template.html
@@ -18,15 +18,10 @@
                         <div class="col-md-3">
                             <div class="form-group">
                                 <label for="">کد {{account.code}}</label>
-                                <input type="text" required class="form-control" v-model="code">
+                                <input type="text"  class="form-control" v-model="code">
                             </div>
                         </div>
-                        <div class="col-md-3">
-                            <div class="form-group">
-                                <label for="">نام</label>
-                                <input type="text" required class="form-control" v-model="name">
-                            </div>
-                        </div>
+                         
 
                          <div class="col-md-12">
                             <div class="form-group">
