--- a/projectmanager/templates/projectmanager/includes/add-project-app/template.html
+++ b/projectmanager/templates/projectmanager/includes/add-project-app/template.html
@@ -138,7 +138,7 @@
               <div class="form-group">
                 <label for="exampleInputDate">&nbsp;</label>
 
-                <a href="{% url 'organization:organizations' %}" target="_blank"
+                <a href="{% url 'organization:organization_units' %}" target="_blank"
                   >لیست سازمان ها</a
                 >
               </div>
