--- a/accounting/templates/accounting/invoice.html
+++ b/accounting/templates/accounting/invoice.html
@@ -13,6 +13,10 @@
         {% include "accounting/includes/invoice-lines-app/template.html" %}
     </div>
 
+    <div class="col-md-12 ">
+        {% include "attachments/includes/locations-app/template.html" %}
+    </div>
+
 
      <div class="col-md-12 ">
         {% include "accounting/includes/financial-document-lines-app/template.html" %}
