--- a/attachments/templates/attachments/index.html
+++ b/attachments/templates/attachments/index.html
@@ -28,6 +28,16 @@
             </h6>
         </a>
     </div>
+
+    
+    <div class="col-6 col-md-3 col-lg-2 text-center my-3">
+        <a href="{% url 'attachments:locations' %}">
+            <img src="{% static 'core/img/logo.png' %}" width="64em" class="mb-2" alt="">
+            <h6 class="text-center">
+                موقعیت ها
+            </h6>
+        </a>
+    </div>
 </div>
 {% endblock content %}
 
