add_person_app bugs fixed

--- a/authentication/templates/authentication/includes/add-person-app/script.html
+++ b/authentication/templates/authentication/includes/add-person-app/script.html
@@ -75,8 +75,7 @@
           email: this.email,
           melli_code: this.melli_code,
           bio: this.bio,
-          profile_id: this.profile.id,
-          profile:{},
+          profile_id: this.profile_id,
         };
 
         console.log(payload);
