--- a/accounting/templates/accounting/includes/invoice-lines-app/template.html
+++ b/accounting/templates/accounting/includes/invoice-lines-app/template.html
@@ -96,7 +96,7 @@
                                     <td class="bordered farsi text-right">
                                         <a :href="invoice_line.invoice_line_item.get_absolute_url">
                                             <div class="media text-right farsi">
-                                                <img width="32" :src="invoice_line.invoice_line_item.thumbnail" alt="">
+                                                <img width="48" class="rounded" :src="invoice_line.invoice_line_item.thumbnail" alt="">
                                                 <div class="media-body mr-2">
 
                                                     <span v-text="invoice_line.invoice_line_item.title"></span>
