--- a/core/templates/core/includes/page-priority-app/template.html
+++ b/core/templates/core/includes/page-priority-app/template.html
@@ -1,4 +1,4 @@
-<div id="account-priority-app" class="text-right">
+<div id="page-priority-app" class="text-right">
     <div class="btn-group rtl" role="group" aria-label="Basic example">
         <button type="button" class="btn btn-danger" @click="decrease_priority()" style="border-radius: 0 5px 5px 0 ;">-</button>
         <button type="button" class="btn btn-light">
