--- a/core/templates/core/includes/page-app/script.html
+++ b/core/templates/core/includes/page-app/script.html
@@ -11,3 +11,4 @@
 {% include "attachments/includes/downloads-app/script.html" %}
 {% include "attachments/includes/locations-app/script.html" %}
 {% include "core/includes/page-related-app/script.html" %}
+{% include "core/includes/page-priority-app/script.html" %}
