--- a/attachments/templates/attachments/includes/images-app/template.html
+++ b/attachments/templates/attachments/includes/images-app/template.html
@@ -53,7 +53,7 @@
 
 
                         </h6>
-                        <a target="_blank" :href="image.get_absolute_url">
+                        <a target="_blank" :href="image.get_absolute_url"  :title="image.title">
 
                             <img :src="image.thumbnail" width="80%" :alt="image.title"
                                 class="rounded">
